--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-PyMuPDF
-langchain
-sentence-transformers
-chromadb
-langchain_community
-beautifulsoup4
+streamlit==1.14.0
+PyMuPDF==1.19.6
+langchain==0.0.24
+sentence-transformers==2.2.2
+chromadb==0.0.12
+langchain_community==0.0.1
+beautifulsoup4==4.10.0
 pysqlite3-binary==0.4.6
