--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ sentence-transformers==2.2.2
 chromadb==0.5.0
 langchain_community==0.0.1
 beautifulsoup4==4.10.0
-pysqlite3-binary==0.5.1
+pysqlite3-binary==0.5.2.post3
