--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.14.0
 PyMuPDF
 langchain==0.0.24
+langchain-chroma
 sentence-transformers==2.2.2
 chromadb==0.5.0
 langchain_community==0.0.1
