--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.14.0
+streamlit
 PyMuPDF
-langchain==0.0.24
+langchain
 langchain_chroma
-sentence-transformers==2.2.2
+sentence-transformers
 chromadb==0.5.0
-langchain_community==0.0.1
-beautifulsoup4==4.10.0
+langchain_community
+beautifulsoup4
 pysqlite3-binary==0.5.2.post3
