--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.14.0
 PyMuPDF
-langchain==0.0.24
+langchain
 sentence-transformers==2.2.2
 chromadb==0.5.0
-langchain_community==0.0.1
+langchain_community
 beautifulsoup4==4.10.0
 pysqlite3-binary==0.5.2.post3
