--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 streamlit==1.14.0
-PyMuPDF==1.19.6
+PyMuPDF
 langchain==0.0.24
 langchain-chroma==0.3.21
 sentence-transformers==2.2.2
-chromadb==0.5.0
+pymilvus-orm==1.0.5
 langchain_community==0.0.1
 beautifulsoup4==4.10.0
 pysqlite3-binary==0.5.2.post3
+
