--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.14.0
+streamlit
 PyMuPDF
-langchain==0.0.24
-sentence-transformers==2.2.2
-pymilvus-orm==0.0.1
-langchain_community==0.0.1
-beautifulsoup4==4.10.0
+langchain
+sentence-transformers
+pymilvus-orm
+langchain_community
+beautifulsoup4
 pysqlite3-binary==0.5.2.post3
 
