--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.14.0
+streamlit==1.20.0
 PyMuPDF
 langchain==0.0.24
 sentence-transformers==2.2.2
@@ -6,5 +6,6 @@ pymilvus-orm==0.0.1
 langchain_community==0.0.1
 beautifulsoup4==4.10.0
 pysqlite3-binary==0.5.2.post3
-grpcio-tools
-protobuf
+protobuf==3.20.0 
+grpcio-tools==1.51.3
+
